# mpu3

backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: deps.py  main.py  seed.py  settings.py
backend/app/api/: client_diagnostic.py  client_progress.py
backend/app/db/: repo.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_initial.py  0002_diagnostic_submissions.py  0003_seed_default_plan_products.py  0004_route_cases.py  0005_route_days.py  0006_program_products_backfill.py  0007_user_progress.py  (+1 more)
backend/app/db/seeds/: seed_data.py  seed_questions.py
backend/app/domain/: models.py  policy.py
backend/app/http/: routes_admin.py  routes_ai.py  routes_auth.py  routes_booking.py  routes_files.py  routes_payments.py  routes_public.py  routes_route.py  routes_route_day.py
backend/app/integrations/: llm_openai.py  meetings_zoom.py  payments_stripe.py
backend/app/security/: audit.py  auth.py
backend/app/services/: ai_orchestrator.py  booking.py  files.py  notifications.py  payments.py  question_bank.py  route_case.py  route_steps.py  scoring.py
backend/app/utils/: ids.py  time.py
backend/mpu_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_ai.py  test_ai_mpu_high_bar.py  test_ai_mpu_standard.py  test_ai_orchestrator_course.py  test_ai_tone.py  test_auth.py  test_booking.py  test_message_in_model.py  test_migration_0003_seed_sql.py  test_payments_checkout_config.py  test_payments_signature.py  test_payments_webhook.py  test_public_diagnostic.py
(+55 files in other folders)
